// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchGroupSettings 1`] = `
Object {
  "graphql": Object {
    "query": "
        query ($id: ID) {
          group (id: $id) {
            id
            accessibility
            avatarUrl
            bannerUrl
            description
            location
            invitePath
            name
            settings {
              allowGroupInvites
              askJoinQuestions
              publicMemberDirectory
            }
            slug
            visibility
            childGroups (first: 100) {
              items {
                id
                name
                avatarUrl
              }
            }
            moderators (first: 100) {
              hasMore
              items {
                id
                name
                avatarUrl
              }
            }
            parentGroups (first: 100) {
              items {
                id
                name
                avatarUrl
              }
            }
            pendingInvitations {
              hasMore
              items {
                id
                email
                createdAt
                lastSentAt
              }
            }
            joinQuestions {
              items {
                id
                questionId
                text
              }
            }
          }
        }
      ",
    "variables": Object {
      "id": 10,
    },
  },
  "meta": Object {
    "extractModel": "Group",
    "id": 10,
  },
  "type": "GroupSettings/FETCH_GROUP_SETTINGS",
}
`;

exports[`updateGroupSettings 1`] = `
Object {
  "graphql": Object {
    "query": "mutation ($id: ID, $changes: GroupInput) {
        updateGroupSettings(id: $id, changes: $changes) {
          id
          settings {
            allowGroupInvites
            askJoinQuestions
            publicMemberDirectory
          }
          joinQuestions {
            items {
              id
              questionId
              text
            }
          }
        }
      }",
    "variables": Object {
      "changes": Object {
        "description": "some desc",
        "name": "blah",
      },
      "id": 123,
    },
  },
  "meta": Object {
    "changes": Object {
      "description": "some desc",
      "name": "blah",
    },
    "extractModel": "Group",
    "id": 123,
    "optimistic": true,
  },
  "type": "GroupSettings/UPDATE_GROUP_SETTINGS",
}
`;
